--- a/index.html
+++ b/index.html
@@ -2,26 +2,128 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
+  <title>Echoo Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- PWA -->
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="icon.png">
-  <title>Echoo Login</title>
+
+  <!-- Bootstrap -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  >
+
+  <style>
+    body {
+      background: #f5f5f5;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+    }
+    .app-container {
+      max-width: 420px;
+      margin: 0 auto;
+      margin-top: 60px;
+      padding: 24px;
+      background: #ffffff;
+      border-radius: 16px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+    }
+    .app-logo {
+      width: 72px;
+      height: 72px;
+      border-radius: 16px;
+      margin-bottom: 12px;
+    }
+    .brand-title {
+      font-weight: 700;
+      font-size: 24px;
+      color: #5a2ea6;
+    }
+    .brand-subtitle {
+      font-size: 14px;
+      color: #777;
+    }
+    .hidden {
+      display: none !important;
+    }
+    .status-ok {
+      color: #2e7d32;
+    }
+    .status-error {
+      color: #c62828;
+    }
+  </style>
+
   <script defer src="app.js"></script>
 </head>
 <body>
-    <h2>Echoo Login</h2>
 
-    <form id="loginForm">
-        <input type="text" id="login" placeholder="Логін" required><br><br>
-        <input type="password" id="password" placeholder="Пароль" required><br><br>
-        <button type="submit">Увійти</button>
+  <!-- Екран логіну -->
+  <div id="loginScreen" class="app-container">
+    <div class="text-center mb-3">
+      <img src="icon.png" alt="Echoo" class="app-logo">
+      <div class="brand-title">Echoo</div>
+      <div class="brand-subtitle">Безпечний вхід з захистом від brute-force</div>
+    </div>
+
+    <form id="loginForm" class="mt-3">
+      <div class="mb-3">
+        <label for="login" class="form-label">Логін</label>
+        <input type="text" id="login" class="form-control" placeholder="Введіть логін" required>
+      </div>
+      <div class="mb-3">
+        <label for="password" class="form-label">Пароль</label>
+        <input type="password" id="password" class="form-control" placeholder="Введіть пароль" required>
+      </div>
+      <button type="submit" class="btn btn-primary w-100">Увійти</button>
     </form>
 
-    <p id="result"></p>
+    <p id="loginResult" class="mt-3 text-center"></p>
+  </div>
+
+  <!-- Екран після входу -->
+  <div id="appScreen" class="app-container hidden">
+    <div class="text-center mb-3">
+      <img src="icon.png" alt="Echoo" class="app-logo">
+      <div class="brand-title">Echoo</div>
+      <div class="brand-subtitle">Ви успішно увійшли</div>
+    </div>
+
+    <div class="mb-3">
+      <h5>Профіль</h5>
+      <p><strong>Логін:</strong> <span id="userLogin"></span></p>
+      <p><strong>Час входу:</strong> <span id="loginTime"></span></p>
+    </div>
+
+    <div class="mb-3">
+      <h5>Стан безпеки</h5>
+      <p id="securityInfo" class="status-ok">
+        Захищено: увімкнено rate-limiting і тимчасове блокування акаунта при великій кількості невдалих спроб входу.
+      </p>
+    </div>
+
+    <div class="mb-3">
+      <h5>Демонстраційні дані</h5>
+      <p>Це умовна «внутрішня» частина застосунку, доступна лише після автентифікації.</p>
+      <ul>
+        <li>Приватні чати</li>
+        <li>Налаштування профілю</li>
+        <li>Можливі майбутні функції: дзвінки, файли тощо</li>
+      </ul>
+    </div>
+
+    <button id="logoutBtn" class="btn btn-outline-secondary w-100">Вийти</button>
+  </div>
+
+  <!-- Реєстрація Service Worker -->
+  <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("service-worker.js")
+        .then(reg => console.log("Service worker registered", reg))
+        .catch(err => console.warn("Service worker registration failed", err));
+    }
+  </script>
+
 </body>
-<script>
-if ("serviceWorker" in navigator) {
-    navigator.serviceWorker.register("service-worker.js");
-}
-</script>
 </html>
