виправлена помилка назви іконки

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <!-- Екран після входу -->
   <div id="appScreen" class="app-container hidden">
     <div class="text-center mb-3">
-      <img src="icon.png" alt="Echoo" class="app-logo">
+      <img src="echoo.png" alt="Echoo" class="app-logo">
       <div class="brand-title">Echoo</div>
       <div class="brand-subtitle">Ви успішно увійшли</div>
     </div>
