--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- PWA -->
   <link rel="manifest" href="manifest.json">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="apple-touch-icon" href="echoo.png">
 
   <!-- Bootstrap -->
   <link
