--- a/index.html
+++ b/index.html
@@ -17,41 +17,112 @@
 
   <style>
     body {
-      background: #f5f5f5;
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+      background: linear-gradient(135deg, #6a11cb, #8e2de2);
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      padding-top: 40px;
     }
+
     .app-container {
+      width: 92%;
       max-width: 420px;
-      margin: 0 auto;
-      margin-top: 60px;
-      padding: 24px;
-      background: #ffffff;
-      border-radius: 16px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+      padding: 28px;
+      border-radius: 28px;
+      background: rgba(255, 255, 255, 0.25);
+      backdrop-filter: blur(18px);
+      box-shadow:
+        8px 8px 20px rgba(0, 0, 0, 0.25),
+        -6px -6px 16px rgba(255, 255, 255, 0.35);
+      animation: fadeIn 0.6s ease;
     }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
     .app-logo {
-      width: 72px;
-      height: 72px;
-      border-radius: 16px;
+      width: 90px;
+      height: 90px;
+      border-radius: 22px;
       margin-bottom: 12px;
+      box-shadow:
+        6px 6px 14px rgba(0, 0, 0, 0.25),
+        -4px -4px 10px rgba(255, 255, 255, 0.4);
     }
+
     .brand-title {
-      font-weight: 700;
-      font-size: 24px;
-      color: #5a2ea6;
+      font-weight: 800;
+      font-size: 28px;
+      color: white;
+      text-shadow: 0 2px 6px rgba(0,0,0,0.25);
     }
+
     .brand-subtitle {
-      font-size: 14px;
-      color: #777;
+      font-size: 15px;
+      color: #f0eaff;
+      opacity: 0.9;
     }
+
+    .neoinput {
+      border: none;
+      border-radius: 16px;
+      padding: 14px 16px;
+      background: rgba(255, 255, 255, 0.55);
+      box-shadow:
+        inset 4px 4px 10px rgba(0, 0, 0, 0.15),
+        inset -4px -4px 10px rgba(255, 255, 255, 0.6);
+      font-size: 16px;
+    }
+
+    .neobutton {
+      border: none;
+      border-radius: 18px;
+      padding: 14px;
+      font-size: 18px;
+      font-weight: 600;
+      color: white;
+      background: linear-gradient(135deg, #7b1fe3, #9b3df0);
+      box-shadow:
+        4px 4px 12px rgba(0, 0, 0, 0.25),
+        -4px -4px 12px rgba(255, 255, 255, 0.25);
+      transition: 0.15s ease;
+    }
+
+    .neobutton:active {
+      transform: scale(0.97);
+      box-shadow:
+        inset 4px 4px 10px rgba(0, 0, 0, 0.25),
+        inset -4px -4px 10px rgba(255, 255, 255, 0.25);
+    }
+
     .hidden {
       display: none !important;
     }
+
     .status-ok {
-      color: #2e7d32;
+      color: #d4ffdd;
+      font-weight: 600;
     }
+
     .status-error {
-      color: #c62828;
+      color: #ffe0e0;
+      font-weight: 600;
+    }
+
+    h5 {
+      color: white;
+      font-weight: 700;
+      margin-top: 20px;
+    }
+
+    p, li {
+      color: #f5eaff;
     }
   </style>
 
@@ -62,21 +133,19 @@
   <!-- Екран логіну -->
   <div id="loginScreen" class="app-container">
     <div class="text-center mb-3">
-      <img src="icon.png" alt="Echoo" class="app-logo">
+      <img src="echoo.png" alt="Echoo" class="app-logo">
       <div class="brand-title">Echoo</div>
       <div class="brand-subtitle">Безпечний вхід з захистом від brute-force</div>
     </div>
 
     <form id="loginForm" class="mt-3">
       <div class="mb-3">
-        <label for="login" class="form-label">Логін</label>
-        <input type="text" id="login" class="form-control" placeholder="Введіть логін" required>
+        <input type="text" id="login" class="form-control neoinput" placeholder="Логін" required>
       </div>
       <div class="mb-3">
-        <label for="password" class="form-label">Пароль</label>
-        <input type="password" id="password" class="form-control" placeholder="Введіть пароль" required>
+        <input type="password" id="password" class="form-control neoinput" placeholder="Пароль" required>
       </div>
-      <button type="submit" class="btn btn-primary w-100">Увійти</button>
+      <button type="submit" class="neobutton w-100">Увійти</button>
     </form>
 
     <p id="loginResult" class="mt-3 text-center"></p>
@@ -90,40 +159,26 @@
       <div class="brand-subtitle">Ви успішно увійшли</div>
     </div>
 
-    <div class="mb-3">
-      <h5>Профіль</h5>
-      <p><strong>Логін:</strong> <span id="userLogin"></span></p>
-      <p><strong>Час входу:</strong> <span id="loginTime"></span></p>
-    </div>
+    <h5>Профіль</h5>
+    <p><strong>Логін:</strong> <span id="userLogin"></span></p>
+    <p><strong>Час входу:</strong> <span id="loginTime"></span></p>
 
-    <div class="mb-3">
-      <h5>Стан безпеки</h5>
-      <p id="securityInfo" class="status-ok">
-        Захищено: увімкнено rate-limiting і тимчасове блокування акаунта при великій кількості невдалих спроб входу.
-      </p>
-    </div>
+    <h5>Стан безпеки</h5>
+    <p id="securityInfo" class="status-ok">
+      Захищено: увімкнено rate-limiting і тимчасове блокування акаунта.
+    </p>
 
-    <div class="mb-3">
-      <h5>Демонстраційні дані</h5>
-      <p>Це умовна «внутрішня» частина застосунку, доступна лише після автентифікації.</p>
-      <ul>
-        <li>Приватні чати</li>
-        <li>Налаштування профілю</li>
-        <li>Можливі майбутні функції: дзвінки, файли тощо</li>
-      </ul>
-    </div>
+    <h5>Демонстраційні дані</h5>
+    <ul>
+      <li>Приватні чати</li>
+      <li>Налаштування профілю</li>
+      <li>Майбутні функції: дзвінки, файли, push-повідомлення</li>
+    </ul>
 
-    <button id="logoutBtn" class="btn btn-outline-secondary w-100">Вийти</button>
+    <button id="logoutBtn" class="neobutton w-100 mt-3" style="background: #ffffff22; color:white;">
+      Вийти
+    </button>
   </div>
-
-  <!-- Реєстрація Service Worker -->
-  <script>
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("service-worker.js")
-        .then(reg => console.log("Service worker registered", reg))
-        .catch(err => console.warn("Service worker registration failed", err));
-    }
-  </script>
 
 </body>
 </html>
