--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       border-radius: 28px;
       background: rgba(255, 255, 255, 0.25);
       backdrop-filter: blur(18px);
+      -webkit-backdrop-filter: blur(18px);
       box-shadow:
         8px 8px 20px rgba(0, 0, 0, 0.25),
         -6px -6px 16px rgba(255, 255, 255, 0.35);
@@ -175,7 +176,7 @@
       <li>Майбутні функції: дзвінки, файли, push-повідомлення</li>
     </ul>
 
-    <button id="logoutBtn" class="neobutton w-100 mt-3" style="background: #ffffff22; color:white;">
+    <button id="logoutBtn" class="neobutton w-100 mt-3 logout-btn" style="background: #ffffff22; color:white;">
       Вийти
     </button>
   </div>
