--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
     </form>
 
     <p id="loginResult" class="mt-3 text-center"></p>
+    <p class="text-center mt-3">
+    Немає акаунта? <a href="#" onclick="showRegisterScreen()">Зареєструватися</a>
+    </p>
+
   </div>
 
   <!-- Екран після входу -->
