--- a/index.html
+++ b/index.html
@@ -131,13 +131,37 @@
 </head>
 <body>
 
-  <!-- Екран логіну -->
-  <div id="loginScreen" class="app-container">
+    <!-- Екран логіну -->
+    <div id="loginScreen" class="app-container">
     <div class="text-center mb-3">
       <img src="echoo.png" alt="Echoo" class="app-logo">
       <div class="brand-title">Echoo</div>
       <div class="brand-subtitle">Безпечний вхід з захистом від brute-force</div>
     </div>
+    <!-- Екран реєстрації -->
+    <div id="registerScreen" class="app-container hidden">
+    <div class="text-center mb-3">
+        <img src="echoo.png" alt="Echoo" class="app-logo">
+        <div class="brand-title">Echoo</div>
+        <div class="brand-subtitle">Створіть новий акаунт</div>
+    </div>
+
+    <form id="registerForm" class="mt-3">
+        <div class="mb-3">
+        <input type="text" id="registerLogin" class="form-control neoinput" placeholder="Логін" required>
+        </div>
+        <div class="mb-3">
+        <input type="password" id="registerPassword" class="form-control neoinput" placeholder="Пароль" required>
+        </div>
+        <button type="submit" class="neobutton w-100">Зареєструватися</button>
+    </form>
+
+  <p class="text-center mt-3">
+    Вже маєте акаунт? <a href="#" onclick="showLoginScreen()">Увійти</a>
+  </p>
+</div>
+
+
 
     <form id="loginForm" class="mt-3">
       <div class="mb-3">
