--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
     <p class="text-center mt-3">
       Немає акаунта? <a href="#" onclick="showRegisterScreen()">Зареєструватися</a>
     </p>
+    <p class="text-center mt-2">
+      <a href="#" onclick="showHelpScreen()">Забули пароль?</a>
+    </p>
+
   </div>
 
   <!-- Екран реєстрації -->
@@ -177,6 +181,27 @@
       Вже маєте акаунт? <a href="#" onclick="showLoginScreen()">Увійти</a>
     </p>
   </div>
+
+  <!-- Екран допомоги -->
+  <div id="helpScreen" class="app-container hidden">
+    <div class="text-center mb-3">
+      <img src="echoo.png" alt="Echoo" class="app-logo">
+      <div class="brand-title">Echoo</div>
+      <div class="brand-subtitle">Відновлення доступу</div>
+    </div>
+
+    <p class="text-center" style="color:white; font-size:18px;">
+      Для допомоги зв’яжіться із адміністратором:<br>
+      <a href="mailto:vladmaloglovec@gmail.com" style="color:#fff; text-decoration:underline;">
+        vladmaloglovec@gmail.com
+      </a>
+    </p>
+
+    <p class="text-center mt-3">
+      <a href="#" onclick="showLoginScreen()">← Повернутися на логін</a>
+    </p>
+  </div>
+
 
   <!-- Екран після входу -->
   <div id="appScreen" class="app-container hidden">
