--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <p class="text-center" style="color:white; font-size:18px;">
       Для допомоги зв’яжіться із адміністратором:<br>
       <a href="mailto:vladmaloglovec@gmail.com" style="color:#fff; text-decoration:underline;">
-        vladmaloglovec@gmail.com
+        vladmaloglovec911@gmail.com
       </a>
     </p>
 
